[view]: 상세페이지 UI 구현

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -11,7 +11,7 @@
     @apply font-bold text-[18px]
   }
 
-  .font-extrbold-16 {
+  .font-extrabold-16 {
     @apply font-extrabold text-[16px]
   }
 
