[feat]: 상세페이지 수정 기능 구현

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,6 +3,9 @@
 @tailwind utilities;
 
 @layer components {
+  .scroll::-webkit-scrollbar {
+    display: none;
+  }
   .font-bold-20 {
     @apply font-bold text-[20px]
   }
