[feat]: 무한스크롤 구현

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,7 +2,35 @@
 @tailwind components;
 @tailwind utilities;
 
+@font-face {
+  font-family: 'NanumSquare';
+  font-weight: 700;
+  src: url('/public/font/NanumSquareB.ttf') format('ttf');
+}
+
+@font-face {
+  font-family: 'NanumSquare';
+  font-weight: 800;
+  src: url('/public/font/NanumSquareEB.ttf') format('ttf');
+}
+
+@font-face {
+  font-family: 'NanumSqaure';
+  font-weight: 400;
+  src: url('/public/font/NanumSquareR.ttf') format('ttf')
+}
+
+@font-face {
+  font-family: 'HS-Regular';
+  src: url('https://gcore.jsdelivr.net/gh/projectnoonnu/noonfonts_2201-2@1.0/HS-Regular.woff') format('woff');
+}
+
+body {
+  font-family: 'NanumSquare';
+}
+
 @layer components {
+
   .scroll::-webkit-scrollbar {
     display: none;
   }
